@@ -393,6 +393,8 @@ generator.configureOutput()
             .outputDirectoryForGeneratedSources(Paths.get("src/generated-sources/kotlin").toAbsolutePath().toString())
 ```
 
+NOTE: The root folder for the generated sources specified in `outputDirectoryForGeneratedSources` must exist. All its content will be recursively cleared upon each code generation run. So don't store keep code there that is not auto-generated by the mechanism.
+
 ==== Validate and produce your code
 Now you're set to produce your code, like so.
 ```kotlin
@@ -583,8 +585,8 @@ tr.select(Continents.name, CountryStats.population.sum())
 You already saw `asList()`. There are five more methods available to collect the results from a select or native sql query.
 
 * `asList() : List<T>` fetches the entire `ResultSet` into an immutable `List`, which can be empty.
-* `firstOrNull(): T?` fetches only the first result in the `ResultSet`, which may be null.
 * `first(): T` fetches the first result in the `ResultSet`, throwing a [StatementExecutionException] when there are no results.
+* `firstOrNull(): T?` fetches only the first result in the `ResultSet`, which may be null. Note that when you use `firstOrNull()` to fetch a single nullable column and it returns null, there is no way to distinguish between a null value and an empty result set. In that case, use `first()` and catch the exception.
 * `asSlice(skip: Long, limit: Long): List<T>` iterates through the `ResultSet`, skipping the first _skip_ rows and collects a maximum of _limit_ rows to a list.
 * `forEachRow(): Unit` iterates through the results with a custom predicate.
 * `iterator(): ResultSetIterator<T>` lets you fetch and process each row one by one
